# zelus_mle_assessment

./: .gitattributes  .gitignore  README.md  dvc.yaml  pyproject.toml
src/dataset_curation/: create_training_data.py  filter_innings_results.py  q3a.py
src/model_package/: .gitignore  Dockerfile  check_docker.py  requirements.txt  run_model.py  run_model.sh
src/parsing/: parse_innings_results.py  parse_match_results.py
src/training/: train.py  vis_model.py
tests/data_quality/: test_computed_metrics.py  test_innings_endings.py  test_training_data.py
tests/model_interaction/: test_model_interaction.py
tests/training/: test_training.py
