[project]
name = "part-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dvc>=3.58.0",
    "fastparquet>=2024.11.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
]
